# JSR

./: .gitignore  README.md  build-compact-installer.js  build-installer.js  build-optimized-installer.js  build-optimized.js  check-installer-images.js  convert-svg-simple.js  convert-svg-to-png.js  convert-svg-with-sharp.js  convert-to-ico.js  electron-builder.yml  generate-release.js  index.html  installer.js  main.js  package-lock.json  package.json  preload.js  release-cli.js  release-github.js  renderer.js  splash.html  temp-electron-builder.yml  tsconfig.json
.github/workflows/: auto-release.yml  build.yml  release-fix.yml  release.yml  tauri-build-pr.yml  tauri-release.yml
JSR-Tauri/: README.md  package-lock.json  package.json
JSR-Tauri/.github/workflows/: tauri-build-pr.yml  tauri-release.yml
JSR-Tauri/jsr-tauri-app/src/: package-lock.json  package.json  vite.config.ts
JSR-Tauri/jsr-tauri-app/src/public/locales/: en.json  ru.json
JSR-Tauri/jsr-tauri-app/src/src/: App.css  App.tsx  i18n.ts  main.tsx  types.ts
JSR-Tauri/jsr-tauri-app/src/src-tauri/: Cargo.toml  tauri.conf.json
JSR-Tauri/jsr-tauri-app/src/src-tauri/src/: lib.rs  main.rs
assets/: installer.nsh  nsis-translations.nsh
assets/images/: convert-svg.html  png-to-ico-converter.html
js/: sidebar-controller.js
locales/: de.json  en.json  ru.json  uk.json
src/: installer-config.ts  installer-ui.ts  main.ts  preload.ts  renderer.ts  sidebar.ts  splash-screen.ts
styles/: installer.css  main.css
styles/themes/: dark.css  light.css  neon.css  system.css
(+8 files in other folders)
